Navigation tree small caps and formatting fixes. Sticky site info (copyright) at bottom of sidebar. Set sidebar to 100vh (viewer height). Fixed content scrollbar positioning.

--- a/wp-content/plugins/wp-parsi-navigation-trees/css/wp-parsi-navigation-trees.css
+++ b/wp-content/plugins/wp-parsi-navigation-trees/css/wp-parsi-navigation-trees.css
@@ -7,8 +7,8 @@
 
 #wb_tree ul{
 	list-style: none;
-	text-transform: uppercase;
-	font-size: .8em;
+	font-variant: small-caps;
+	font-size: .9em;
 	line-height: 2.5em;
 }
 #wb_tree ul li{
